regex for var names

--- a/.env-test
+++ b/.env-test
@@ -1,2 +1,21 @@
 TEST="123"
 TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
+TEST1="1234"
