--- a/.env-test
+++ b/.env-test
@@ -1,21 +1,7 @@
-TEST="123"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
-TEST1="1234"
+TEST0="123"
+TEST1=123
+TEST2="123 123"
+TEST3=123 123
+TEST4= 123"123
+TEST5= 123 123"
+TEST6= 123 123 "
